# bazel-java-lab

./: .gitignore  BUILD.bazel  WORKSPACE  def.bzl
helloworld/: BUILD.bazel  HelloWorldServer.java
helloworld/proto/: helloworld.proto
invokable/: BUILD.bazel  Invokable.java
invoker/: BUILD.bazel  Invoker.java
subtool/: BUILD.bazel  Subtool.java
